--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.0.0",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-dates": "^20.2.5",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
     "react-redux": "^7.1.0",
