--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "server": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p  --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest"
   },
@@ -20,6 +21,7 @@
     "css-loader": "^3.0.0",
     "jest": "^24.8.0",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
