--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p  --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "@babel/core": "^7.4.5",
@@ -19,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.0.0",
+    "express": "^4.17.1",
     "jest": "^24.8.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.7.0",
