--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Guido",
   "license": "UNLICENSED",
   "scripts": {
-    "server": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p  --env production",
     "dev-server": "webpack-dev-server",
@@ -23,7 +22,6 @@
     "css-loader": "^3.0.0",
     "express": "^4.17.1",
     "jest": "^24.8.0",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -33,15 +31,17 @@
     "react-modal": "^3.8.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-with-direction": "^1.3.0",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^11.0.0",
-    "webpack": "^4.35.0",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^4.35.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.5"
+    "chalk": "^2.4.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   }
 }
